--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.12.16",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
