--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "react-scroll": "^1.8.9",
