--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.0.1",
     "@mui/material": "^5.13.2",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -27,6 +28,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-modal": "^3.16.1",
     "react-scroll": "^1.8.9",
     "react-typed": "^1.2.0",
     "scroll": "^3.0.1"
