added projects section

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-modal": "^3.16.1",
     "react-scroll": "^1.8.9",
     "react-typed": "^1.2.0",
-    "scroll": "^3.0.1"
+    "scroll": "^3.0.1",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
